--- a/QuantExt/qle/CMakeLists.txt
+++ b/QuantExt/qle/CMakeLists.txt
@@ -140,7 +140,6 @@ termstructures/yoyinflationoptionletvolstripper.cpp)
 # hpp files, this list is maintained manually
 
 set(QuantExt_HDR auto_link.hpp
-version.hpp
 calendars/chile.hpp
 calendars/colombia.hpp
 calendars/france.hpp
@@ -171,10 +170,6 @@ indexes/dkcpi.hpp
 indexes/equityindex.hpp
 indexes/fxindex.hpp
 indexes/genericiborindex.hpp
-indexes/inflationindexobserver.hpp
-indexes/inflationindexwrapper.hpp
-indexes/region.hpp
-indexes/secpi.hpp
 indexes/ibor/audbbsw.hpp
 indexes/ibor/brlcdi.hpp
 indexes/ibor/chfsaron.hpp
@@ -207,6 +202,10 @@ indexes/ibor/skkbribor.hpp
 indexes/ibor/thbbibor.hpp
 indexes/ibor/tonar.hpp
 indexes/ibor/twdtaibor.hpp
+indexes/inflationindexobserver.hpp
+indexes/inflationindexwrapper.hpp
+indexes/region.hpp
+indexes/secpi.hpp
 instruments/averageois.hpp
 instruments/cdsoption.hpp
 instruments/commodityforward.hpp
@@ -228,7 +227,6 @@ instruments/oiccbasisswap.hpp
 instruments/payment.hpp
 instruments/subperiodsswap.hpp
 instruments/tenorbasisswap.hpp
-math/cumulativenormaldistribution.hpp
 math/deltagammavar.hpp
 math/flatextrapolation.hpp
 math/nadarayawatson.hpp
@@ -351,7 +349,8 @@ termstructures/yoyinflationcurveobserverstatic.hpp
 termstructures/yoyinflationoptionletvolstripper.hpp
 termstructures/yoyoptionletvolatilitysurface.hpp
 termstructures/zeroinflationcurveobservermoving.hpp
-termstructures/zeroinflationcurveobserverstatic.hpp)
+termstructures/zeroinflationcurveobserverstatic.hpp
+version.hpp)
 
 writeAll("qle" "quantext.hpp" "auto_link.hpp" "${QuantExt_HDR}")
 add_library(${QLE_LIB_NAME} ${QuantExt_SRC})
