--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 
 project(ORE CXX)
 
-enable_testing()
+include(CTest)
 
 include("cmake/commonSettings.cmake")
 
