hit the road jack

--- a/QuantExt/qle/math/Makefile.am
+++ b/QuantExt/qle/math/Makefile.am
@@ -12,8 +12,7 @@ this_include_HEADERS = \
 	nadarayawatson.hpp \
 	stabilisedglls.hpp \
 	deltagammavar.hpp \
-	trace.hpp \
-	cumulativenormaldistribution.hpp
+	trace.hpp
 
 noinst_LTLIBRARIES = libMath.la
 
