[touch: 582]Initial commit of fixings code along with test setup
- Test only covers fixed float swap. Will add more types.
- Some coupons require more attention e.g. inflation coupons

The test highlights a shortcoming in our Trade XML in that the FloatingLegData
FixingDays defaults to 0 if not provided. This then leads to the
incorrect fixing date being requested i.e. user most likely expects the
natural fixing days of the index but gets 0.

--- a/OREData/test/OREDataTestSuite.vcxproj
+++ b/OREData/test/OREDataTestSuite.vcxproj
@@ -655,6 +655,7 @@
     <ClCompile Include="equitymarketdata.cpp" />
     <ClCompile Include="equityswap.cpp" />
     <ClCompile Include="equitytrades.cpp" />
+    <ClCompile Include="fixings.cpp" />
     <ClCompile Include="fxoption.cpp" />
     <ClCompile Include="fxswap.cpp" />
     <ClCompile Include="fxtriangulation.cpp" />
