--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -106,5 +106,8 @@
     <ClCompile Include="digitalcms.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="fixings.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
