--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -56,6 +56,7 @@
     <ClInclude Include="ored\configuration\securityconfig.hpp" />
     <ClInclude Include="ored\configuration\swaptionvolcurveconfig.hpp" />
     <ClInclude Include="ored\configuration\yieldcurveconfig.hpp" />
+    <ClInclude Include="ored\configuration\yieldvolcurveconfig.hpp" />
     <ClInclude Include="ored\marketdata\basecorrelationcurve.hpp" />
     <ClInclude Include="ored\marketdata\capfloorvolcurve.hpp" />
     <ClInclude Include="ored\marketdata\cdsvolcurve.hpp" />
@@ -87,6 +88,7 @@
     <ClInclude Include="ored\marketdata\todaysmarketparameters.hpp" />
     <ClInclude Include="ored\marketdata\yieldcurve.hpp" />
     <ClInclude Include="ored\marketdata\inflationcapfloorvolcurve.hpp" />
+    <ClInclude Include="ored\marketdata\yieldvolcurve.hpp" />
     <ClInclude Include="ored\model\crossassetmodelbuilder.hpp" />
     <ClInclude Include="ored\model\crossassetmodeldata.hpp" />
     <ClInclude Include="ored\model\eqbsbuilder.hpp" />
@@ -190,6 +192,7 @@
     <ClCompile Include="ored\configuration\inflationcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\swaptionvolcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\yieldcurveconfig.cpp" />
+    <ClCompile Include="ored\configuration\yieldvolcurveconfig.cpp" />
     <ClCompile Include="ored\marketdata\basecorrelationcurve.cpp" />
     <ClCompile Include="ored\marketdata\capfloorvolcurve.cpp" />
     <ClCompile Include="ored\marketdata\cdsvolcurve.cpp" />
@@ -220,6 +223,7 @@
     <ClCompile Include="ored\marketdata\todaysmarketparameters.cpp" />
     <ClCompile Include="ored\marketdata\yieldcurve.cpp" />
     <ClCompile Include="ored\marketdata\inflationcapfloorvolcurve.cpp" />
+    <ClCompile Include="ored\marketdata\yieldvolcurve.cpp" />
     <ClCompile Include="ored\model\crossassetmodelbuilder.cpp" />
     <ClCompile Include="ored\model\crossassetmodeldata.cpp" />
     <ClCompile Include="ored\model\eqbsbuilder.cpp" />
