--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -213,7 +213,7 @@
     <ClInclude Include="ored\portfolio\tradefactory.hpp">
       <Filter>portfolio</Filter>
     </ClInclude>
-	<ClInclude Include="ored\portfolio\builders\all.hpp">
+    <ClInclude Include="ored\portfolio\builders\all.hpp">
       <Filter>portfolio\builders</Filter>
     </ClInclude>
     <ClInclude Include="ored\portfolio\builders\cachingenginebuilder.hpp">
@@ -410,7 +410,7 @@
     </ClInclude>
     <ClInclude Include="ored\portfolio\builders\bondoption.hpp">
       <Filter>portfolio\builders</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="ored\marketdata\inmemoryloader.hpp">
       <Filter>marketdata</Filter>
     </ClInclude>
@@ -424,6 +424,12 @@
       <Filter>configuration</Filter>
     </ClInclude>
     <ClInclude Include="ored\marketdata\correlationcurve.hpp">
+      <Filter>marketdata</Filter>
+    </ClInclude>
+    <ClInclude Include="ored\configuration\yieldvolcurveconfig.hpp">
+      <Filter>configuration</Filter>
+    </ClInclude>
+    <ClInclude Include="ored\marketdata\yieldvolcurve.hpp">
       <Filter>marketdata</Filter>
     </ClInclude>
   </ItemGroup>
@@ -759,6 +765,12 @@
       <Filter>configuration</Filter>
     </ClCompile>
     <ClCompile Include="ored\marketdata\correlationcurve.cpp">
+      <Filter>marketdata</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\configuration\yieldvolcurveconfig.cpp">
+      <Filter>configuration</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\marketdata\yieldvolcurve.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
   </ItemGroup>
