--- a/OREData/test/CMakeLists.txt
+++ b/OREData/test/CMakeLists.txt
@@ -42,4 +42,6 @@ target_link_libraries(ored-test-suite ${QLE_LIB_NAME})
 target_link_libraries(ored-test-suite ${QL_LIB_NAME})
 target_link_libraries(ored-test-suite ${Boost_LIBRARIES})
 
-add_test(NAME ored-test-suite COMMAND ored-test-suite WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR})
+# under windows our unit test code switches to .. since it assumes the test executable is run from /bin
+# we work around that by explicitly specifying the base_data_path to be the current directory
+add_test(NAME ored-test-suite WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR} COMMAND ored-test-suite -- --base_data_path=.)
