--- a/QuantExt/QuantExt.vcxproj.filters
+++ b/QuantExt/QuantExt.vcxproj.filters
@@ -372,7 +372,7 @@
     <ClInclude Include="qle\pricingengines\blackcdsoptionengine.hpp">
       <Filter>pricingengines</Filter>
     </ClInclude>
-	<ClInclude Include="qle\pricingengines\blackbondoptionengine.hpp">
+    <ClInclude Include="qle\pricingengines\blackbondoptionengine.hpp">
       <Filter>pricingengines</Filter>
     </ClInclude>
     <ClInclude Include="qle\termstructures\survivalprobabilitycurve.hpp">
@@ -647,6 +647,9 @@
     </ClInclude>
     <ClInclude Include="qle\termstructures\interpolatedcorrelationcurve.hpp">
       <Filter>termstructures</Filter>
+    </ClInclude>
+    <ClInclude Include="qle\instruments\bondoption.hpp">
+      <Filter>instruments</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -958,7 +961,7 @@
     <ClCompile Include="qle\pricingengines\blackcdsoptionengine.cpp">
       <Filter>pricingengines</Filter>
     </ClCompile>
-	<ClCompile Include="qle\pricingengines\blackbondoptionengine.cpp">
+    <ClCompile Include="qle\pricingengines\blackbondoptionengine.cpp">
       <Filter>pricingengines</Filter>
     </ClCompile>
     <ClCompile Include="qle\termstructures\blackvolsurfacewithatm.cpp">
@@ -1113,6 +1116,9 @@
     </ClCompile>
     <ClCompile Include="qle\termstructures\flatcorrelation.cpp">
       <Filter>termstructures</Filter>
+    </ClCompile>
+    <ClCompile Include="qle\instruments\bondoption.cpp">
+      <Filter>instruments</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
