--- a/QuantExt/qle/instruments/Makefile.am
+++ b/QuantExt/qle/instruments/Makefile.am
@@ -25,7 +25,8 @@ libInstruments_la_SOURCES = \
 	commodityforward.cpp \
 	impliedbondspread.cpp \
     fixedbmaswap.cpp \
-	crossccyfixfloatswap.cpp
+	crossccyfixfloatswap.cpp \
+	bondoption.cpp
 
 this_includedir=${includedir}/${subdir}
 this_include_HEADERS = \
@@ -50,7 +51,8 @@ this_include_HEADERS = \
 	commodityforward.hpp \
 	impliedbondspread.hpp \
     fixedbmaswap.hpp \
-	crossccyfixfloatswap.hpp
+	crossccyfixfloatswap.hpp \
+	bondoption.hpp
 
 noinst_LTLIBRARIES = libInstruments.la
 
