--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -50,6 +50,7 @@
     <ClInclude Include="ored\configuration\equityvolcurveconfig.hpp" />
     <ClInclude Include="ored\configuration\fxspotconfig.hpp" />
     <ClInclude Include="ored\configuration\fxvolcurveconfig.hpp" />
+    <ClInclude Include="ored\configuration\genericyieldvolcurveconfig.hpp" />
     <ClInclude Include="ored\configuration\inflationcapfloorpricesurfaceconfig.hpp" />
     <ClInclude Include="ored\configuration\inflationcapfloorvolcurveconfig.hpp" />
     <ClInclude Include="ored\configuration\inflationcurveconfig.hpp" />
@@ -74,6 +75,7 @@
     <ClInclude Include="ored\marketdata\fxspot.hpp" />
     <ClInclude Include="ored\marketdata\fxtriangulation.hpp" />
     <ClInclude Include="ored\marketdata\fxvolcurve.hpp" />
+    <ClInclude Include="ored\marketdata\genericyieldvolcurve.hpp" />
     <ClInclude Include="ored\marketdata\inflationcapfloorpricesurface.hpp" />
     <ClInclude Include="ored\marketdata\inflationcurve.hpp" />
     <ClInclude Include="ored\marketdata\loader.hpp" />
@@ -104,7 +106,6 @@
     <ClInclude Include="ored\model\utilities.hpp" />
     <ClInclude Include="ored\ored.hpp" />
     <ClInclude Include="ored\portfolio\bond.hpp" />
-    <ClInclude Include="ored\portfolio\builders\all.hpp" />
     <ClInclude Include="ored\portfolio\builders\bond.hpp" />
     <ClInclude Include="ored\portfolio\builders\cachingenginebuilder.hpp" />
     <ClInclude Include="ored\portfolio\builders\capfloor.hpp" />
@@ -184,12 +185,11 @@
     <ClCompile Include="ored\configuration\equitycurveconfig.cpp" />
     <ClCompile Include="ored\configuration\equityvolcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\fxvolcurveconfig.cpp" />
+    <ClCompile Include="ored\configuration\genericyieldvolcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\inflationcapfloorpricesurfaceconfig.cpp" />
     <ClCompile Include="ored\configuration\inflationcapfloorvolcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\inflationcurveconfig.cpp" />
-    <ClCompile Include="ored\configuration\swaptionvolcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\yieldcurveconfig.cpp" />
-    <ClCompile Include="ored\configuration\yieldvolcurveconfig.cpp" />
     <ClCompile Include="ored\marketdata\basecorrelationcurve.cpp" />
     <ClCompile Include="ored\marketdata\capfloorvolcurve.cpp" />
     <ClCompile Include="ored\marketdata\cdsvolcurve.cpp" />
@@ -207,6 +207,7 @@
     <ClCompile Include="ored\marketdata\fxspot.cpp" />
     <ClCompile Include="ored\marketdata\fxtriangulation.cpp" />
     <ClCompile Include="ored\marketdata\fxvolcurve.cpp" />
+    <ClCompile Include="ored\marketdata\genericyieldvolcurve.cpp" />
     <ClCompile Include="ored\marketdata\inflationcapfloorpricesurface.cpp" />
     <ClCompile Include="ored\marketdata\inflationcurve.cpp" />
     <ClCompile Include="ored\marketdata\market.cpp" />
