--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -213,9 +213,6 @@
     <ClInclude Include="ored\portfolio\tradefactory.hpp">
       <Filter>portfolio</Filter>
     </ClInclude>
-    <ClInclude Include="ored\portfolio\builders\all.hpp">
-      <Filter>portfolio\builders</Filter>
-    </ClInclude>
     <ClInclude Include="ored\portfolio\builders\cachingenginebuilder.hpp">
       <Filter>portfolio\builders</Filter>
     </ClInclude>
@@ -423,6 +420,12 @@
     <ClInclude Include="ored\portfolio\fixingdates.hpp">
       <Filter>portfolio</Filter>
     </ClInclude>
+    <ClInclude Include="ored\configuration\genericyieldvolcurveconfig.hpp">
+      <Filter>configuration</Filter>
+    </ClInclude>
+    <ClInclude Include="ored\marketdata\genericyieldvolcurve.hpp">
+      <Filter>marketdata</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ored\configuration\capfloorvolcurveconfig.cpp">
@@ -438,9 +441,6 @@
       <Filter>configuration</Filter>
     </ClCompile>
     <ClCompile Include="ored\configuration\fxvolcurveconfig.cpp">
-      <Filter>configuration</Filter>
-    </ClCompile>
-    <ClCompile Include="ored\configuration\swaptionvolcurveconfig.cpp">
       <Filter>configuration</Filter>
     </ClCompile>
     <ClCompile Include="ored\configuration\yieldcurveconfig.cpp">
@@ -749,14 +749,17 @@
     <ClCompile Include="ored\marketdata\correlationcurve.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
-    <ClCompile Include="ored\configuration\yieldvolcurveconfig.cpp">
-      <Filter>configuration</Filter>
-    </ClCompile>
     <ClCompile Include="ored\marketdata\yieldvolcurve.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
     <ClCompile Include="ored\portfolio\fixingdates.cpp">
       <Filter>portfolio</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\configuration\genericyieldvolcurveconfig.cpp">
+      <Filter>configuration</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\marketdata\genericyieldvolcurve.cpp">
+      <Filter>marketdata</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
