--- a/OREData/ored/portfolio/builders/Makefile.am
+++ b/OREData/ored/portfolio/builders/Makefile.am
@@ -24,6 +24,7 @@ this_include_HEADERS = \
 	capfloorediborleg.hpp \
 	equityforward.hpp \
 	equityoption.hpp \
+	forwardbond.hpp \
 	fxforward.hpp \
 	fxoption.hpp \
 	swap.hpp \
