--- a/QuantExt/qle/instruments/Makefile.am
+++ b/QuantExt/qle/instruments/Makefile.am
@@ -12,6 +12,7 @@ libInstruments_la_SOURCES = \
 	currencyswap.cpp \
 	deposit.cpp \
 	equityforward.cpp \
+	forwardbond.cpp \
 	fxforward.cpp \
 	makeaverageois.cpp \
 	oibasisswap.cpp \
@@ -37,6 +38,7 @@ this_include_HEADERS = \
 	currencyswap.hpp \
 	deposit.hpp \
 	equityforward.hpp \
+	forwardbond.hpp \
 	fxforward.hpp \
 	makeaverageois.hpp \
 	oibasisswap.hpp \
