--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,6 @@
 	url = git@codebasehq.com:qrm/openxva/quantlib.git
 	branch = v1.8.x.beta
 	ignore = dirty
+[submodule "OREPlus/openssl"]
+	path = OREPlus/openssl
+	url = https://github.com/openssl/openssl.git
