--- a/QuantExt/qle/indexes/ibor/Makefile.am
+++ b/QuantExt/qle/indexes/ibor/Makefile.am
@@ -20,6 +20,7 @@ this_include_HEADERS = \
 	nzdbkbm.hpp \
 	plnwibor.hpp \
 	rubmosprime.hpp \
+	saibor.hpp \
 	sekstibor.hpp \
 	sgdsibor.hpp \
 	sgdsor.hpp \
