--- a/QuantExt/qle/Makefile.am
+++ b/QuantExt/qle/Makefile.am
@@ -10,7 +10,8 @@ SUBDIRS = \
 	processes \
 	quotes \
 	calendars \
-	termstructures
+	termstructures \
+    time
 
 AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}
 
@@ -37,7 +38,8 @@ libQuantExt_la_LIBADD = \
 	processes/libProcesses.la \
 	quotes/libQuotes.la \
 	calendars/libCalendars.la \
-	termstructures/libTermStructures.la
+	termstructures/libTermStructures.la \
+    time/libTime.la
 
 EXTRA_DIST = \
 	auto_link.hpp
