--- a/QuantExt/qle/indexes/ibor/Makefile.am
+++ b/QuantExt/qle/indexes/ibor/Makefile.am
@@ -1,6 +1,11 @@
 
 AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}
 
+noinst_LTLIBRARIES = libIborIndexes.la
+
+libIborIndexes_la_SOURCES = \
+    brlcdi.cpp
+
 this_includedir=${includedir}/${subdir}
 this_include_HEADERS = \
     all.hpp \
