--- a/OREData/ored/portfolio/builders/Makefile.am
+++ b/OREData/ored/portfolio/builders/Makefile.am
@@ -19,6 +19,7 @@ this_includedir=${includedir}/${subdir}
 this_include_HEADERS = \
 	all.hpp \
 	bond.hpp \
+	bondtotalreturnswap.hpp \
 	cachingenginebuilder.hpp \
 	capfloor.hpp \
 	capfloorediborleg.hpp \
