--- a/QuantExt/qle/pricingengines/Makefile.am
+++ b/QuantExt/qle/pricingengines/Makefile.am
@@ -19,6 +19,7 @@ libPricingEngines_la_SOURCES = \
 	discountingcurrencyswapengine.cpp \
 	discountingequityforwardengine.cpp \
 	discountingforwardbondengine.cpp \
+	discountingbondtrsengine.cpp \
 	discountingfxforwardengine.cpp \
 	discountingswapenginemulticurve.cpp \
 	oiccbasisswapengine.cpp \
@@ -45,6 +46,7 @@ this_include_HEADERS = \
 	discountingcurrencyswapengine.hpp \
 	discountingequityforwardengine.hpp \
 	discountingforwardbondengine.hpp \
+	discountingbondtrsengine.hpp \
 	discountingfxforwardengine.hpp \
 	discountingswapenginemulticurve.hpp \
 	oiccbasisswapengine.hpp \
