Use flat extrapolation before first optionlet expiry
If flat extrapolation is set in QuantExt::StrippedOptionletAdapter2 then
flat extrapolate before the first expiry also. Allowing linear
extrapolation before first expiry and only applying the flat
extrapolation after the last expiry gives poor results in some cases
when calculating sensitivities.

--- a/QuantExt/test/Makefile.am
+++ b/QuantExt/test/Makefile.am
@@ -39,7 +39,8 @@ QLE_TESTS = \
 	crossccybasismtmresetswaphelper.cpp \
 	cpicapfloor.cpp 
 	correlationtermstructure.cpp \
-	cpicapfloor.cpp
+	cpicapfloor.cpp \
+	strippedoptionletadapter.cpp
 
 dist-hook:
 	mkdir -p $(distdir)/build
