--- a/QuantExt/test/testsuite.vcxproj.filters
+++ b/QuantExt/test/testsuite.vcxproj.filters
@@ -116,6 +116,9 @@
     <ClCompile Include="fillemptymatrix.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="strippedoptionletadapter.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="source">
