Simple yield curve bootstrap test
Important that the market quotes use multiples of 28D to get the correct
schedule.

--- a/OREData/test/CMakeLists.txt
+++ b/OREData/test/CMakeLists.txt
@@ -26,6 +26,7 @@ fxtriangulation.cpp
 indices.cpp
 inflationcapfloor.cpp
 legdata.cpp
+mxnircurves.cpp
 ored_commodityforward.cpp
 parser.cpp
 portfolio.cpp
