--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -109,5 +109,8 @@
     <ClCompile Include="fixings.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="mxnircurves.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
