--- a/QuantExt/qle/CMakeLists.txt
+++ b/QuantExt/qle/CMakeLists.txt
@@ -53,6 +53,7 @@ instruments/payment.cpp
 instruments/subperiodsswap.cpp
 instruments/tenorbasisswap.cpp
 math/deltagammavar.cpp
+math/fillemptymatrix.cpp
 methods/multipathgeneratorbase.cpp
 models/cdsoptionhelper.cpp
 models/cmscaphelper.cpp
@@ -103,10 +104,10 @@ processes/irlgm1fstateprocess.cpp
 quotes/logquote.cpp
 termstructures/averageoisratehelper.cpp
 termstructures/basistwoswaphelper.cpp
-termstructures/brlcdiratehelper.cpp
 termstructures/blackvariancecurve3.cpp
 termstructures/blackvariancesurfacemoneyness.cpp
 termstructures/blackvolsurfacewithatm.cpp
+termstructures/brlcdiratehelper.cpp
 termstructures/capfloortermvolsurface.cpp
 termstructures/correlationtermstructure.cpp
 termstructures/crossccybasismtmresetswaphelper.cpp
@@ -236,6 +237,7 @@ instruments/payment.hpp
 instruments/subperiodsswap.hpp
 instruments/tenorbasisswap.hpp
 math/deltagammavar.hpp
+math/fillemptymatrix.hpp
 math/flatextrapolation.hpp
 math/nadarayawatson.hpp
 math/stabilisedglls.hpp
@@ -300,11 +302,11 @@ quotes/exceptionquote.hpp
 quotes/logquote.hpp
 termstructures/averageoisratehelper.hpp
 termstructures/basistwoswaphelper.hpp
-termstructures/brlcdiratehelper.hpp
 termstructures/blackinvertedvoltermstructure.hpp
 termstructures/blackvariancecurve3.hpp
 termstructures/blackvariancesurfacemoneyness.hpp
 termstructures/blackvolsurfacewithatm.hpp
+termstructures/brlcdiratehelper.hpp
 termstructures/capfloortermvolsurface.hpp
 termstructures/correlationtermstructure.hpp
 termstructures/crossccybasismtmresetswaphelper.hpp
