--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -35,6 +35,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="calendaradjustmentconfig.hpp" />
     <ClInclude Include="ored\auto_link.hpp" />
     <ClInclude Include="ored\configuration\basecorrelationcurveconfig.hpp" />
     <ClInclude Include="ored\configuration\capfloorvolcurveconfig.hpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="ored\version.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="calendaradjustmentconfig.cpp" />
     <ClCompile Include="ored\configuration\basecorrelationcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\capfloorvolcurveconfig.cpp" />
     <ClCompile Include="ored\configuration\cdsvolcurveconfig.cpp" />
